mysql-template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  namespace: mysql-namespace
  labels:
    app: phpmyadmin-mysql-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin-mysql-app
  template:
    metadata:
      labels:
        app: phpmyadmin-mysql-app
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: my-pvc2-volume
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: phpmyadmin-mysql-app
  namespace: mysql-namespace
spec:
  type: NodePort
  ports:
  - port: 3306
    protocol: TCP
    name: mysql-port
  selector:
    app: phpmyadmin-mysql-app
#---
#apiVersion: v1
#kind: Secret
#metadata:
#  name: phpmyadmin-secret
#  namespace: mysql-namespace
#type: Opaque
#stringData:
#  PMA_USER: root
#  PMA_PASSWORD: my-password
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: mysql-deployment
#  namespace: mysql-namespace
#  labels:
#    app: phpmyadmin-mysql-app
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: phpmyadmin-mysql-app
#  template:
#    metadata:
#      labels:
#        app: phpmyadmin-mysql-app
#    spec:
#      containers:
#        - name: phpmyadmin
#          image: phpmyadmin/phpmyadmin:5.1.0
#          ports:
#            - containerPort: 80
#          env:
#            - name: PMA_ARBITRARY
#              value: "1"
#            - name: PMA_HOST
#              value: "mysql-service"
#            - name: PMA_PORT
#              value: "3306"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: phpmyadmin-service
#  labels:
#    app: phpmyadmin-mysql-app
#  namespace: mysql-namespace
#spec:
#  type: NodePort
#  ports:
#  - port: 80
#    protocol: TCP
#    name: phpmyadmin-port
#  selector:
#    app: phpmyadmin-mysql-app
